part_1/todo-application/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    #name: web
  #clusterIP: None
  selector:
    app: postgres
