part_1/todo-application/manifests/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-application
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
